# CFrame-old

./: CFrame.cmake  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Manual.md
products/cframedemo/: CFrameLists.txt
products/cframedemo/libs/CFrameDemo/: hello.c  hello.h
projects/cframedemo/: CFrameLists.txt
projects/cframedemo/apps/: CMakeLists.txt  qHello.cpp
projects/cframedemo/libs/CFrameDemo/: API.h  CMakeLists.txt  QHello.cpp  QHello.hpp  osgHello.cpp  osgHello.hpp
share/: CMakeLists.txt
share/cframe/cmake/: CFrameBuildFunctions.cmake  CFrameInitialize.cmake  CFrameInternal.cmake  CFrameProjects.cmake  CFrameUtilities.cmake  CMakeLists.txt  SetupBoost.cmake  SetupQt.cmake
src/core/: DirectoryUtils.cmake  Initialize.cmake  ListUtils.cmake  Messaging.cmake  Stages.cmake  SubsystemUtils.cmake  UnitTestInternal.cmake
src/core/tests/: DirectoryUtilsTests.cmake  ListUtilsTests.cmake  MessagingTests.cmake
src/subsystems/projects/: Initialize.cmake  Preprocess.cmake
src/subsystems/targets/: FileGroup.cmake  Initialize.cmake  Target.cmake
src/subsystems/targets/tests/: FileGroupTests.cmake
testproject/: CMakeLists.txt
testtools/: CMakeLists.txt
testtools/catch/: CMakeLists.txt
